error-pages/error-pages-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: error-pages
  name: error-pages
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: error-pages
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: error-pages
    spec:
      containers:
        - env: ## ghost   l7-light  l7-dark   shuffle   noise   hacker-terminal cats
            - name: TEMPLATE_NAME
              value: ghost
          image: tarampampam/error-pages:2.3.0
          name: error-pages
          ports:
            - containerPort: 8080
          resources:
          # resources:
          #   requests:
          #     cpu: "0.5"
          #     memory: 16Mi
          #   limits:
          #     cpu: "2.00"
          #     memory: 32Mi
      restartPolicy: Always
status: {}
