error-pages/error-pages-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: error-pages
  name: error-pages
  namespace: default
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: error-pages
status:
  loadBalancer: {}
